src/objects/OV_KPI_Element__c.object
<CustomObject>
    <fields>
        <fullName>Brand_Comparator__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand Comparator</label>
        <referenceTo>OV_Comparator__c</referenceTo>
        <relationshipLabel>One View KPIs</relationshipLabel>
        <relationshipName>One_View_KPIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>OV_Brand__c</referenceTo>
        <relationshipLabel>One View KPIs</relationshipLabel>
        <relationshipName>One_View_KPIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Category</label>
        <referenceTo>OV_Category__c</referenceTo>
        <relationshipLabel>One View KPIs</relationshipLabel>
        <relationshipName>OV_KPIsCategory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <inlineHelpText>Channel</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Cash &amp; Carry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience (CVS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Merchandiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small/Open Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One View Customer</description>
        <inlineHelpText>Customer</inlineHelpText>
        <label>One View Customer</label>
        <referenceTo>OV_Customer__c</referenceTo>
        <relationshipLabel>One View KPIs</relationshipLabel>
        <relationshipName>One_View_KPIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>OneView status of a KPI Element</description>
        <inlineHelpText>OneView status of a KPI Element</inlineHelpText>
        <label>Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Function</label>
        <referenceTo>OV_Function__c</referenceTo>
        <relationshipLabel>One View KPIs</relationshipLabel>
        <relationshipName>OV_KPIsFunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geography</label>
        <referenceTo>OV_Geography__c</referenceTo>
        <relationshipLabel>One View KPIs</relationshipLabel>
        <relationshipName>OV_KPIsGeography</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPI_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked send an alert to all One View Consumers who are following the KPI Elements</description>
        <inlineHelpText>When checked send an alert to all One View Consumers who are following the KPI Elements</inlineHelpText>
        <label>KPI Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Value__c</fullName>
        <description>Pure KPI Value as provided from Tableau</description>
        <inlineHelpText>Pure KPI Value to be rounded for KPI Visulisation</inlineHelpText>
        <label>KPI Value</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <label>KPI Name</label>
        <referenceTo>OV_KPI_Name__c</referenceTo>
        <relationshipLabel>One View KPIs</relationshipLabel>
        <relationshipName>OV_KPIName</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <referenceTo>OV_Report__c</referenceTo>
        <relationshipLabel>One View KPIs</relationshipLabel>
        <relationshipName>OV_KPIsReports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rounded_Value__c</fullName>
        <description>Round the KPI Value to 2 decimal places</description>
        <formula>ROUND( KPI_Value__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rounded KPI Value  to 2 decimal places</inlineHelpText>
        <label>Rounded Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>OneView KPI Target</description>
        <inlineHelpText>OneView KPI Target</inlineHelpText>
        <label>Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpan__c</fullName>
        <description>OneView KPI Time span provided fro Tableau</description>
        <inlineHelpText>OneView Timespan for KPI Elements</inlineHelpText>
        <label>TimeSpan</label>
        <picklist>
            <picklistValues>
                <fullName>4 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving Annual Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unilever YTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>One View KPI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KPI__c</columns>
        <columns>Direction__c</columns>
        <columns>TimeSpan__c</columns>
        <columns>Rounded_Value__c</columns>
        <columns>Report__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>Geography__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Comparator__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PPI_KPI_Flora_Pro_s</fullName>
        <columns>NAME</columns>
        <columns>KPI__c</columns>
        <columns>Direction__c</columns>
        <columns>TimeSpan__c</columns>
        <columns>Rounded_Value__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>Geography__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Comparator__c</columns>
        <columns>Report__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KPI__c</field>
            <operation>equals</operation>
            <value>PPI</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Flora Pro Activ</value>
        </filters>
        <label>PPI KPI Flora Pro Activ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PPI_KPI_s</fullName>
        <columns>NAME</columns>
        <columns>KPI__c</columns>
        <columns>Direction__c</columns>
        <columns>TimeSpan__c</columns>
        <columns>Rounded_Value__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>Geography__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Comparator__c</columns>
        <columns>Report__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KPI__c</field>
            <operation>equals</operation>
            <value>PPI</value>
        </filters>
        <label>PPI KPI&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Quality_KPI_s</fullName>
        <columns>NAME</columns>
        <columns>KPI__c</columns>
        <columns>Direction__c</columns>
        <columns>TimeSpan__c</columns>
        <columns>Rounded_Value__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>Geography__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Comparator__c</columns>
        <columns>Report__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KPI__c</field>
            <operation>equals</operation>
            <value>Quality</value>
        </filters>
        <label>Quality KPI&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sellin_KPI_s</fullName>
        <columns>NAME</columns>
        <columns>KPI__c</columns>
        <columns>Direction__c</columns>
        <columns>TimeSpan__c</columns>
        <columns>Rounded_Value__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>Geography__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Comparator__c</columns>
        <columns>Report__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KPI__c</field>
            <operation>equals</operation>
            <value>Sell In</value>
        </filters>
        <label>Sell In KPI&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sellout_KPI_s</fullName>
        <columns>NAME</columns>
        <columns>KPI__c</columns>
        <columns>Direction__c</columns>
        <columns>TimeSpan__c</columns>
        <columns>Rounded_Value__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>Geography__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Comparator__c</columns>
        <columns>Report__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KPI__c</field>
            <operation>equals</operation>
            <value>Sell Out</value>
        </filters>
        <label>Sell OUT KPI&apos;s</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>One View KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One View KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>